Demo-4/admissionpolicybinding.yaml
apiVersion: admissionregistration.k8s.io/v1alpha1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "label-policy-binding.example.com"
spec:
  policyName: "label-policy.example.com"
  paramRef:
    name: "label-in-deployments"
    namespace: default
  matchResources:
    namespaceSelector:
      matchLabels:
        environment: test
